Create all movies section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="text-2xl font-bold italic"><a href="#">WeLoveMovies</a></h1>
 
         <nav class="space-x-5">
-          <a href="#">All Movies</a>
+          <a href="/all-movies.html">All Movies</a>
           <a href="#">All Theaters</a>
         </nav>
       </div>
