Add show and therater section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <nav class="space-x-5">
           <a href="/all-movies.html">All Movies</a>
-          <a href="#">All Theaters</a>
+          <a href="/theaters.html">All Theaters</a>
         </nav>
       </div>
 
@@ -24,7 +24,7 @@
       </div>
     </header>
 
-    <main class="container mx-auto px-20">
+    <main class="container mx-auto px-10 lg:px-48">
 
       <!-- now showing section -->
       <div class="py-10">
