--- a/all-movies.html
+++ b/all-movies.html
@@ -12,11 +12,10 @@
       class="p-3 text-white bg-hero-custom-image bg-cover bg-center bg-no-repeat"
     >
       <div class="flex items-center space-x-20">
-        <h1 class="text-2xl font-bold italic"><a href="#">WeLoveMovies</a></h1>
-
+        <h1 class="text-2xl font-bold italic"><a href="/">WeLoveMovies</a></h1>
         <nav class="space-x-5">
-          <a href="#">All Movies</a>
-          <a href="#">All Theaters</a>
+          <a href="/all-movies.html">All Movies</a>
+          <a href="/theaters.html">All Theaters</a>
         </nav>
       </div>
 
@@ -57,7 +56,7 @@
                 <p class="font-bold">Runtime: <span class="font-light">minutes</span></p>
                 <p class="font-bold">Rating: <span class="font-light">PG</span></p>
                 <p class="font-bold">Average Review Rating: <span class="font-light">3</span></p>
-                <button class="py-2 px-6 bg-blue-500 text-white rounded">See More</button>
+                <a href="/show.html" class="inline-block py-2 px-6 bg-blue-500 text-white rounded">See More</a>
               </div>
             </article>
 
